--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Kartik Yadav</title>
+        <style>
+            body{
+                background-color: #CBF1F5;
+            }
+        </style>
     </head>
     <body>
         <!-- <img src="https://lh3.googleusercontent.com/a-/AFdZucqzsxY1u3kQfBz1aR4r5jxB5mqO5o3qg9XzEjjzrzI=s288-p-rw-no" alt="Kartik's profile picture"> -->
@@ -102,3 +107,4 @@
         <a href="contact.html">Contact Me</a>
     </body>
 </html>
+<!-- https://kartik-yadav12.github.io/cv/ -->
