--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
             body{
                 background-color: #CBF1F5;
             }
+            hr{
+                background-colour: white;
+                border-style: none;
+                height: 20px;
+            }
         </style>
     </head>
     <body>
