--- a/contact.html
+++ b/contact.html
@@ -2,39 +2,114 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Contact Me</title>
+        <title>Kartik Yadav</title>
+        <style>
+            body{
+                background-color: #CBF1F5;
+            }
+            hr{
+                background-color: white;
+                border-style: none;
+                height: 2px;
+            }
+        </style>
     </head>
     <body>
-        <h1>My Contact Details</h1>
-        <p>
-            E-mail: <a href="mailto:kartikyadav1202@gmail.com">kartikyadav1202@gmail.com</a><br>
-            LinkedIn: <a href="https://in.linkedin.com/in/kartik-yadav12?trk=public_profile_browsemap">Kartik Yadav</a><br>
-            Mobile: +91 9625023719 <br>
-            Address: <a href="https://www.google.com/maps/place/Santushti+apartments/@28.5267066,77.1477073,18.32z/data=!4m5!3m4!1s0x390d1e6eb6e08dfb:0x6cf3b1acedc5c017!8m2!3d28.5273186!4d77.1483297">Vasant Kunj, New Delhi</a><br>
-        </p>
+        <!-- <img src="https://lh3.googleusercontent.com/a-/AFdZucqzsxY1u3kQfBz1aR4r5jxB5mqO5o3qg9XzEjjzrzI=s288-p-rw-no" alt="Kartik's profile picture"> -->
+        <table cellspacing="20">
+            <td><img src="Kartik.png" alt="Kartik's profile picture"></td>
+            <td>
+                <h1>Kartik Yadav</h1>
+                <p>Undergrad at <em><a href="http://www.nsut.ac.in/">Netaji Subhas University of Technology.</a></em></p>
+                <p>I am a 2nd year student at NSUT pursuing B'tech in <strong>CSE</strong>. I have intrests in <strong>competitive programming</strong> and <strong>Web Development</strong>. I am also a finance enthusiast with fundamental and technical knowledge about stocks and charts. </p>
+            </td>
+        </table>
         <hr>
-        <h1>Send your contact details</h1>
-        <p>
-            <form action="mailto:kartikyadav1202@gmail.com" method="post" enctype="text/plain">
-                <table>
-                    <tr>
-                        <td><label>Name</label></td>
-                        <td>:</td>
-                        <td><input type="text" name="Name"></td>
-                    </tr>
-                    <tr>
-                        <td><label>E-mail</label></td>
-                        <td>:</td>
-                        <td><input type="email" name="Email"></td>
-                    </tr>
-                    <tr>
-                        <td><label>Mobile</label></td>
-                        <td>:</td>
-                        <td><input type="text" name="Mobile"></td>
-                    </tr>
-                </table>
-                <input type="submit">
-            </form>
-        </p>
+        <h3>Education</h3>
+        <ul>
+            <li>Matriculation from <em><a href="https://cambridgefoundationschool.com/">Cambridge Foundation School,Rajouri Garden.</em></a></li>
+            <li>Intermidiate from <em><a href="http://dpsvasantkunj.com/">Delhi Public School, Vasant Kunj.</a></em></li>
+            <li>Bachelors in Computer Science from <em><a href="http://www.nsut.ac.in/">Netaji Subhas University of Technology, Dwarka.</a></em></li>
+        </ul>
+        <hr>
+        <h3>My Hobbies</h3>
+        <ol>
+            <li>Playing Chess</li>
+            <li>Watching Movies</li>
+            <li>Listening Music</li>
+        </ol>
+        <hr>
+        <h3>Achivements</h3>
+        <table cellspacing="10">
+            <header>
+                <tr>
+                    <th>Year</th>
+                    <th>Achivement</th>
+                </tr>
+            </header>
+            <body>
+                <tr>
+                    <td>2022</td>
+                    <td>3 star at Codechef</td>
+                </tr>
+                <tr>
+                    <td>2019</td>
+                    <td>1st prize at inter-school Science Model Making competition</td>
+                </tr>
+                <tr>
+                    <td>2018</td>
+                    <td>2nd prize at inter-school Science Model Making competition</td>
+                </tr>
+                <tr>
+                    <td>2017</td>
+                    <td>Student of the year Award</td>
+                </tr>
+                <tr>
+                    <td>2016</td>
+                    <td>Abacus Speed Champion</td>
+                </tr>
+            </body>
+        </table>
+        <hr>
+        <h3>Skills</h3>
+        <table>
+            <tr>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <td>C++</td>
+                            <td>⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>C</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>MySQL</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <td>Python</td>
+                            <td>⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>HTML</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Photo-editing</td>
+                            <td>⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <hr>
+        <a href="contact.html">Contact Me</a>
     </body>
 </html>
+<!-- https://kartik-yadav12.github.io/cv/ -->
