--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
                 background-color: #CBF1F5;
             }
             hr{
-                background-colour: white;
+                background-color: white;
                 border-style: none;
-                height: 4px;
+                height: 2px;
             }
         </style>
     </head>
